recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:5: error: not found: value leverCrayon
    leverCrayon();
    ^Tree:8: error: not found: value baisserCrayon
    baisserCrayon();
    ^